<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstLay"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/OptionLinLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toTopOf="@id/ConstLay"
        app:layout_constraintBottom_toTopOf="@id/DisplayedNumbersLinLay"
        app:layout_constraintLeft_toLeftOf="@id/ConstLay"
        app:layout_constraintRight_toLeftOf="@id/ConstLay">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_person_add_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/Black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">


            <Button
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_person_add_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_contact"
                android:textColor="@color/Black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_message_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_SMS"
                android:textColor="@color/Black"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DisplayedNumbersLinLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/OptionLinLay"
        app:layout_constraintBottom_toTopOf="@id/KeyboardLinLay"
        app:layout_constraintLeft_toLeftOf="@id/ConstLay"
        app:layout_constraintRight_toLeftOf="@id/ConstLay">

        <Button
            android:id="@+id/btn_more"
            android:layout_width="8dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/more"
            app:layout_constraintTop_toTopOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintBottom_toBottomOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintLeft_toLeftOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintRight_toLeftOf="@id/disp_numb_txt"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/disp_numb_txt"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="123"
            android:textAlignment="center"
            android:textColor="@color/Black"
            app:autoSizeTextType="uniform"

            app:layout_constraintTop_toTopOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintBottom_toBottomOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintLeft_toRightOf="@id/btn_more"
            app:layout_constraintRight_toLeftOf="@id/btn_del"
            app:layout_constraintVertical_weight="9"/>


        <Button
            android:id="@+id/btn_del"
            android:layout_width="27dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:background="@drawable/delete"

            app:layout_constraintTop_toTopOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintBottom_toBottomOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintLeft_toRightOf="@id/disp_numb_txt"
            app:layout_constraintRight_toRightOf="@id/DisplayedNumbersLinLay"
            app:layout_constraintVertical_weight="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/KeyboardLinLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="5"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/DisplayedNumbersLinLay"
        app:layout_constraintBottom_toBottomOf="@id/ConstLay"
        app:layout_constraintLeft_toLeftOf="@id/ConstLay"
        app:layout_constraintRight_toLeftOf="@id/ConstLay"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn1"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn4"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn7"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_star"
                    android:textSize="40dp"
                    android:background="@color/White" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn2"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn5"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn8"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn0"
                    android:textSize="40dp"
                    android:background="@color/White" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn3"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn6"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn9"
                    android:textSize="40dp"
                    android:background="@color/White" />

                <Button
                    android:id="@+id/btn_hasht"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_hash"
                    android:textSize="40dp"
                    android:background="@color/White" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/btn_call"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="@drawable/call_btn"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>